Fixed the alignmnet of social story from 9 to 14 in just listed kit

--- a/public/_assets/listing-commands/css/marketing-steps-lc1.css
+++ b/public/_assets/listing-commands/css/marketing-steps-lc1.css
@@ -177,6 +177,9 @@ body.listing-command-proof .assets-steps{
     border-radius: 0.313rem;
     transform: scale(1.1);
 }
+.assets-steps .asset-container > a{
+	display: flex;
+}
 
 .assets-steps .asset-container img{
 	width: auto;
